apps/utilities/open-webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: utilities
  labels:
    app: open-webui
    tier: utilities
spec:
  replicas: 1
  revisionHistoryLimit: 1
  minReadySeconds: 3
  selector:
    matchLabels:
      app: open-webui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: open-webui
        tier: utilities
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: open-webui-data
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:0.11.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app/backend/data
              readOnly: false
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
